# coding-experiments

./: .gitignore  README.md  bot.py  fast_batch_resizer.py
bot-rs/: Cargo.toml
bot-rs/src/: main.rs
bot2/: README.md  go.mod  main.go
plans/: bot-refactor-plan.md
